metadataPackage_1602884205764/objects/Ecm_Ingest__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Ecm Ingest</label>
    <fields>
        <fullName>Endpoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oauth_ClientId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Oauth ClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oauth_Scope__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Oauth Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oauth_Secret__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Oauth Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oauth_Token_Url__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Oauth Token Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>